@@ -20,13 +20,40 @@
 
 ### PR#15077: need to substitute in a length-one pairlist, so
 ### handle pairlists first
-bquote <- function(expr, where=parent.frame())
+bquote <- function (expr, where = parent.frame(), splice = FALSE)
 {
-    unquote <- function(e)
-        if (is.pairlist(e)) as.pairlist(lapply(e, unquote))
-        else if (! is.call(e)) e
-        else if (e[[1L]] == as.name(".")) eval(e[[2L]], where)
-        else as.call(lapply(e, unquote))
+    unquote <- function(e) {
+        if (is.pairlist(e))
+            as.pairlist(lapply(e, unquote))
+        else if (is.call(e)) {
+            if (is.name(e[[1L]]) && as.character(e[[1]]) == ".")
+                eval(e[[2L]], where)
+            else if (splice) {
+                if (is.name(e[[1L]]) && as.character(e[[1L]]) == "..")
+                    stop("can only splice inside a call", call. = FALSE)
+                else as.call(unquote.list(e))
+            }
+            else as.call(lapply(e, unquote))
+        }
+        else e
+    }
+
+    is.splice.macro <- function(e)
+        is.call(e) && is.name(e[[1L]]) && as.character(e[[1L]]) == ".."
+
+    unquote.list <- function(e) {
+        p <- Position(is.splice.macro, e, nomatch = NULL)
+        if (is.null(p))
+            lapply(e, unquote)
+        else {
+            n <- length(e)
+            head <- if (p == 1) NULL else e[1 : (p - 1)]
+            tail <- if (p == n) NULL else e[(p + 1) : n]
+            macro <- e[[p]]
+            mexp <- eval(macro[[2L]], where)
+            c(lapply(head, unquote), mexp, as.list(unquote.list(tail)))
+        }
+    }
 
     unquote(substitute(expr))
 }
