@@ -9,14 +9,16 @@
 \description{
   An analogue of the LISP backquote macro.  \code{bquote} quotes its
   argument except that terms wrapped in \code{.()} are evaluated in the
-  specified \code{where} environment.
+  specified \code{where} environment. If \code{splice = TRUE} then
+  terms wrapped in \code{..()} are evaluated and spliced into a call.
 }
 \usage{
-bquote(expr, where = parent.frame())
+bquote(expr, where = parent.frame(), splice = FALSE)
 }
 \arguments{
   \item{expr}{A \link{language object}.}
   \item{where}{An environment.}
+  \item{splice}{Logical; if \code{TRUE} splicing is enabled.}
 }
 
 \value{
@@ -41,6 +43,10 @@ plot(1:10, a*(1:10), main = bquote(a == .(a)))
 ## to set a function default arg
 default <- 1
 bquote( function(x, y = .(default)) x+y )
+
+exprs <- expression(x <- 1, y <- 2, x + y)
+bquote(function() {..(exprs)}, splice = TRUE)
 }
+
 \keyword{programming}
 \keyword{data}
